--- a/client/src/components/BookPage/bookPage.module.css
+++ b/client/src/components/BookPage/bookPage.module.css
@@ -1,9 +1,11 @@
 .bookName {
+  left: 0;
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
   line-height: 54px;
   color: #27378c;
+  padding-bottom: 8px;
 }
 
 .authorName {
@@ -12,6 +14,16 @@
   font-size: 20px;
   line-height: 27px;
   color: #545454;
+  padding-bottom: 8px;
+}
+
+.timeToRead {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 27px;
+  color: #545454;
+  padding-bottom: 24px;
 }
 
 .details {
@@ -20,4 +32,5 @@
   font-size: 16px;
   line-height: 20px;
   color: #000000;
+  padding-bottom: 24px;
 }
