--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,28 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Satoshi", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+@font-face {
+  font-family: "Satoshi";
+  src: local("Satoshi"), url(./fonts/Satoshi-Regular.otf) format("truetype");
+}
+
+@font-face {
+  font-family: "Satoshi";
+  font-weight: 900;
+  src: local("Satoshi"), url(./fonts/Satoshi-Bold.otf) format("truetype");
+}
+
+@font-face {
+  font-family: "Satoshi";
+  font-weight: 900;
+  src: local("Satoshi"), url(./fonts/Satoshi-Black.otf) format("truetype");
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
