--- a/client/src/components/BookPage/bookPage.module.css
+++ b/client/src/components/BookPage/bookPage.module.css
@@ -34,3 +34,49 @@
   color: #000000;
   padding-bottom: 24px;
 }
+
+.backHomeButton {
+  width: 178px;
+  height: 44px;
+  border: 2px solid #27378c;
+  border-radius: 8px;
+  font-family: "Satoshi";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #27378c;
+  align-self: flex-start;
+  margin-bottom: 24px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: white;
+}
+
+.backHomeButton:hover {
+  background-color: #27388c17;
+}
+
+.readButton {
+  width: 178px;
+  height: 44px;
+  border: 2px solid #27378c;
+  border-radius: 8px;
+  font-family: "Satoshi";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: white;
+  align-self: flex-start;
+  margin-bottom: 24px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #27378c;
+}
+
+.readButton:hover {
+  background-color: #27388cee;
+}
