--- a/client/src/components/BookPage/bookPage.module.css
+++ b/client/src/components/BookPage/bookPage.module.css
@@ -56,6 +56,7 @@
 
 .backHomeButton:hover {
   background-color: #27388c17;
+  cursor: pointer;
 }
 
 .readButton {
@@ -79,4 +80,5 @@
 
 .readButton:hover {
   background-color: #27388cee;
+  cursor: pointer;
 }
