Css fixes for pages

--- a/client/src/components/Navbar/navBar.module.css
+++ b/client/src/components/Navbar/navBar.module.css
@@ -7,6 +7,9 @@
   text-transform: capitalize;
   color: #27378c;
   text-decoration: none;
+  background-color: white;
+  border: none;
+  align-self: center;
 }
 
 .link {
